--- a/m3sh/Base.lproj/Main.storyboard
+++ b/m3sh/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Kzr-Ck-l3n">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -24,21 +24,21 @@
                         <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="4LV-hh-0Kz">
-                                <rect key="frame" x="0.0" y="20" width="1080" height="647"/>
+                                <rect key="frame" x="0.0" y="20" width="1080" height="716"/>
                             </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Report" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="KQZ-1w-vlD">
-                                <rect key="frame" x="108" y="43" width="159" height="42"/>
+                                <rect key="frame" x="112" y="43" width="109" height="42"/>
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </label>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="1H4-oG-DFD">
-                                <rect key="frame" x="36" y="199" width="303" height="29"/>
+                                <rect key="frame" x="40" y="268" width="334" height="29"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <segments>
                                     <segment title="Request Assistance"/>
@@ -48,19 +48,10 @@
                                     <action selector="setSafety:" destination="9pv-A4-QxB" eventType="valueChanged" id="dfb-aF-fIe"/>
                                 </connections>
                             </segmentedControl>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MCP-w5-PmB">
-                                <rect key="frame" x="73" y="449" width="229" height="30"/>
-                                <state key="normal" title="Send Data To Peers">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="send:" destination="9pv-A4-QxB" eventType="touchUpInside" id="H5W-SH-8EE"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kTo-8A-dAA">
-                                <rect key="frame" x="68" y="368" width="239" height="73"/>
+                                <rect key="frame" x="112" y="440" width="220" height="73"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="73" id="Kf4-NP-hn1"/>
+                                    <constraint firstAttribute="height" constant="73" id="WBT-45-NVG"/>
                                 </constraints>
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Post Status To Facebook"/>
@@ -73,18 +64,14 @@
                         <constraints>
                             <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="1H4-oG-DFD" secondAttribute="bottom" constant="391" id="DZJ-t9-2ql"/>
                             <constraint firstItem="1H4-oG-DFD" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="Dfs-Uv-GfW"/>
-                            <constraint firstItem="kTo-8A-dAA" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="52" id="Fxb-8d-b9F"/>
                             <constraint firstItem="4LV-hh-0Kz" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="ImG-QI-ETG"/>
-                            <constraint firstItem="MCP-w5-PmB" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="57" id="bGB-wg-B8N"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="kTo-8A-dAA" secondAttribute="trailing" constant="62" id="Npw-EH-QaG"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="kTo-8A-dAA" secondAttribute="bottom" constant="174" id="RY1-d1-KVE"/>
+                            <constraint firstItem="kTo-8A-dAA" firstAttribute="leading" secondItem="KQZ-1w-vlD" secondAttribute="leading" id="UJY-KY-SFm"/>
                             <constraint firstAttribute="bottom" secondItem="4LV-hh-0Kz" secondAttribute="bottom" id="bV9-kA-5no"/>
                             <constraint firstItem="KQZ-1w-vlD" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="23" id="el3-ab-Mgw"/>
-                            <constraint firstItem="MCP-w5-PmB" firstAttribute="centerX" secondItem="1H4-oG-DFD" secondAttribute="centerX" id="iMd-6I-Cp6"/>
                             <constraint firstItem="4LV-hh-0Kz" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="j3x-Hm-JAH"/>
                             <constraint firstItem="KQZ-1w-vlD" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="92" id="mQ2-5h-FxF"/>
-                            <constraint firstItem="kTo-8A-dAA" firstAttribute="centerX" secondItem="MCP-w5-PmB" secondAttribute="centerX" id="ret-87-S5l"/>
-                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="MCP-w5-PmB" secondAttribute="bottom" constant="139" id="s5T-Jh-Vib"/>
-                            <constraint firstItem="kTo-8A-dAA" firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="v10-7D-lBK"/>
-                            <constraint firstItem="MCP-w5-PmB" firstAttribute="top" secondItem="kTo-8A-dAA" secondAttribute="bottom" constant="8" symbolic="YES" id="wg0-0j-Y1Z"/>
                             <constraint firstItem="1H4-oG-DFD" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="20" id="zX6-Nv-FSA"/>
                         </constraints>
                     </view>
@@ -108,14 +95,14 @@
                         <viewControllerLayoutGuide type="bottom" id="Djb-ko-YwX"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="t3E-DP-zRv">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="1920"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="1920"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M5Q-fG-5qZ">
-                                <rect key="frame" x="125" y="301" width="125" height="30"/>
+                                <rect key="frame" x="144.66666666666666" y="301" width="124.99999999999997" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="125" id="kAr-CT-KA0"/>
                                 </constraints>
@@ -127,7 +114,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LTN-UE-IXD">
-                                <rect key="frame" x="117" y="406" width="140" height="30"/>
+                                <rect key="frame" x="136.66666666666666" y="406" width="139.99999999999997" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="140" id="ycx-6D-AzJ"/>
                                 </constraints>
@@ -139,7 +126,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8ix-GN-Bkq">
-                                <rect key="frame" x="137" y="178" width="100" height="30"/>
+                                <rect key="frame" x="156.66666666666666" y="178" width="99.999999999999972" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="p0N-Ri-GOF"/>
                                 </constraints>
@@ -179,11 +166,11 @@
                         <viewControllerLayoutGuide type="bottom" id="dWY-On-dmg"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="iCm-wG-K6S">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="azA-h1-n8d">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -231,15 +218,24 @@
                         <viewControllerLayoutGuide type="bottom" id="LGc-3V-wk1"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="GTa-R3-we8">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Hok-ga-hpn">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="687"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Visual" image="first" id="Q4w-eX-wgD" userLabel="visual"/>
+                    <connections>
+                        <outlet property="mapView" destination="Hok-ga-hpn" id="rlH-rl-fcB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ncR-7a-TsT" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1" y="870"/>
+            <point key="canvasLocation" x="-2.8985507246376816" y="869.02173913043487"/>
         </scene>
     </scenes>
     <resources>
