--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,25 +10,25 @@
               crossorigin="anonymous"></script>
             
         </head>
-            <body>
-                <nav class="navbar navbar-inverse">
-                    <div class="container-fluid">
-                        <div class="navbar-header">  
-                        </div>
-                    </div>
-                </nav>
+            <body id="main">
+                <!--<nav class="navbar navbar-inverse">-->
+                <!--    <div class="container-fluid">-->
+                <!--        <div class="navbar-header">  -->
+                <!--        </div>-->
+                <!--    </div>-->
+                <!--</nav>-->
                 
-                <div class="container" style="width: 100%; margin:30px auto;">
-                    <header class="jumbotron">
-                        <div class="container">
+                <!--<div class="container" style="width: 100%; margin:30px auto;">-->
+                <!--    <header class="jumbotron">-->
+                <!--        <div class="container">-->
                             <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.css">
-                            <h1><i class="protect icon"></i>Welcome To The Safety Mesh</h1>
-                            <p>A Disaster Communication Solution</p>
-                            <p>
-                                <a class="btn btn-success btn-large" href="/">Reload</a>
-                            </p>
-                        </div>
-                    </header>
-                </div>
-                <hr>
+                <!--            <h1><i class="protect icon"></i>Welcome To The Safety Mesh</h1>-->
+                <!--            <p>A Disaster Communication Solution</p>-->
+                <!--            <p>-->
+                <!--                <a class="btn btn-success btn-large" href="/">Reload</a>-->
+                <!--            </p>-->
+                <!--        </div>-->
+                <!--    </header>-->
+                <!--</div>-->
+                <!--<hr>-->
                 
